--- a/Glass/Vue/_Compartilhado/Templates/CampoDescontoQuantidade.html
+++ b/Glass/Vue/_Compartilhado/Templates/CampoDescontoQuantidade.html
@@ -1,6 +1,6 @@
 <div style="position: absolute; border: 1px solid; background-color: white" v-if="idProduto && idCliente && exibir">
     <div style="padding: 3px">
-        <div style="padding: 3px">
+        <div style="padding: 3px" v-if="percentualMaximo > 0">
             <span>
                 Desconto máximo:
             </span>
@@ -16,12 +16,18 @@
                 {{ percentualTabela | percentual }}
             </span>
         </div>
-        <div style="padding: 3px">
+        <div style="padding: 3px" v-if="percentualMaximo > 0">
             <span>
                 Desconto aplicado:
             </span>
             <span>
-                <input type="number" step="0.01" min="0" v-bind:max="percentualMaximo" v-model.number="percentualAtual" style="width: 50px"> %
+                <template v-if="permitirAlterarDesconto">
+                    <input type="number" step="0.01" min="0" v-bind:max="percentualMaximo" v-model.number="percentualAtual" style="width: 50px">
+                    %
+                </template>                
+                <span v-else>
+                    {{ percentualAtual | percentual }}
+                </span>
             </span>
         </div>
     </div>
