--- a/Glass/Vue/_Compartilhado/Templates/CampoQuantidade.html
+++ b/Glass/Vue/_Compartilhado/Templates/CampoQuantidade.html
@@ -3,5 +3,5 @@
     <campo-desconto-quantidade v-bind:percentual.sync="percentualDescontoPorQuantidadeAtual" v-bind:valor.sync="valorDescontoPorQuantidadeAtual"
         v-bind:id-produto="idProduto" v-bind:id-cliente="idCliente" v-bind:exibir="exibirDescontoPorQuantidade && exibirDescontoPorQuantidade_"
         v-bind:percentual-maximo="percentualDescontoPorQuantidadeMaximo" v-bind:percentual-tabela="percentualDescontoTabela"
-        v-if="idProduto"></campo-desconto-quantidade>
+        v-bind:permitir-alterar-desconto="permitirAlterarDescontoPorQuantidade" v-if="idProduto"></campo-desconto-quantidade>
 </span>
