--- a/Glass/Vue/_Compartilhado/Templates/CampoBuscaCidade.html
+++ b/Glass/Vue/_Compartilhado/Templates/CampoBuscaCidade.html
@@ -1,5 +1,6 @@
 ﻿<span>
     <select v-model="ufAtual">
+        <option></option>
         <option v-for="uf in ufs" v-bind:value="uf">{{ uf }}</option>
     </select>
     <campo-busca v-bind:id="idAtual" v-bind:nome="nomeAtual" v-bind:funcao-buscar-itens="buscarCidades"
