--- a/Glass/Vue/_Compartilhado/Templates/ControleParcelas.html
+++ b/Glass/Vue/_Compartilhado/Templates/ControleParcelas.html
@@ -1,35 +1,33 @@
-<span>
-    <span v-bind:style="estiloControle">
-        <span v-for="(parcela, index) in parcelasAtuais.detalhes" v-bind:key="index">
-            <div v-bind:style="obterEstiloParcela(index)">
-                <label>
-                    {{ index + 1 }}ª parcela
-                </label>
-            </div>
-            <div v-bind:style="obterEstiloParcela(index)">
-                <label>
-                    Valor
-                </label>
-                <input type="number" v-model.number="parcela.valor" step="0.01" v-bind:min="valorMinimoParcela"
-                    style="width: 70px" v-bind="$attrs" />
-            </div>
-            <div v-bind:style="obterEstiloParcela(index)">
-                <label>
-                    Data
-                </label>
-                <template v-if="podeEditar">
-                    <campo-data-hora v-bind:data-hora="parcela.data" v-bind:data-minima="parcela.dataMinima" required
-                        v-bind="$attrs"></campo-data-hora>
-                </template>
-                <template v-else>
-                    {{ parcela.data | data }}
-                </template>
-            </div>
-        </span>
+<span v-bind:style="estiloControle">
+    <span v-for="(parcela, index) in parcelasAtuais.detalhes" v-bind:key="index">
+        <div v-bind:style="obterEstiloParcela(index)">
+            <label>
+                {{ index + 1 }}ª parcela
+            </label>
+        </div>
+        <div v-bind:style="obterEstiloParcela(index)">
+            <label>
+                Valor
+            </label>
+            <input type="number" v-model.number="parcela.valor" step="0.01" v-bind:min="valorMinimoParcela"
+                style="width: 70px" v-bind="$attrs" />
+        </div>
+        <div v-bind:style="obterEstiloParcela(index)">
+            <label>
+                Data
+            </label>
+            <template v-if="podeEditar">
+                <campo-data-hora v-bind:data-hora="parcela.data" v-bind:data-minima="parcela.dataMinima" required
+                    v-bind="$attrs"></campo-data-hora>
+            </template>
+            <template v-else>
+                {{ parcela.data | data }}
+            </template>
+        </div>
     </span>
-    <div style="color: red; padding-top: 6px" v-if="invalido">
+    <span style="color: red" v-if="invalido">
         Soma das parcelas não coincide com o valor total. <br>
         Valor esperado: {{ total | moeda }} <br>
         Valor informado: {{ totalParcelas | moeda }}
-    </div>
+    </span>
 </span>
