--- a/Glass/Style/Geral.css
+++ b/Glass/Style/Geral.css
@@ -22,19 +22,22 @@ body, td {
 
 input, textarea, select {
   margin: 2px 0;
+  line-height: 18px;
+  border: 1px solid #a9a9a9;
+  padding: 1px 4px;
 }
 
-  input[type="text"], input[type="search"], input[type="number"],
-  input[type="email"], input[type="date"], input[type="time"],
-  textarea, select {
+  input[type="date"], input[type="time"] {
     line-height: 16px;
-    border: 1px solid #a9a9a9;
-    padding: 1px 2px;
   }
 
-    input:invalid, textarea:invalid, select:invalid {
-      border-color: red;
-    }
+select {
+  padding: 2px 0;
+}
+
+  input:invalid, textarea:invalid, select:invalid {
+    border-color: red;
+  }
 
 a {
   text-decoration: none;
@@ -319,11 +322,15 @@ fieldset {
 }
 
 section {
-  padding-top: 16px;
+  margin-top: 16px;
 }
 
   section:first-child {
-    padding: 0;
+    margin: 0;
+  }
+
+  section.edicao {
+    margin-top: 16px;
   }
 
   section span {
@@ -358,12 +365,6 @@ section {
       padding-left: initial;
     }
 
-  div.edicao, section.edicao {
-    display: inline-grid;
-    grid-gap: 8px 20px;
-    grid-template-columns: repeat(4, max-content);
-  }
-
   div.detalhes, section.detalhes {
     display: inline-grid;
     grid-gap: 8px 20px;
@@ -377,7 +378,6 @@ section {
 
     div.detalhes label, section.detalhes label,
     div.edicao label, section.edicao label {
-      padding-right: 4px;
       font-weight: bold;
       position: initial;
     }
@@ -434,4 +434,27 @@ section {
       background-color: transparent;
       cursor: pointer;
       padding: 0;
+    }
+
+  div.edicao, section.edicao {
+    display: inline-grid;
+    grid-gap: 0px 6px;
+    grid-template-columns: repeat(4, max-content);
+    align-items: stretch;
+  }
+
+    div.edicao *.cabecalho, section.edicao *.cabecalho {
+      background-color: #E9ECF1;
+      margin: 0;
+      padding: 0 3px;
+      display: inline-grid;
+    }
+
+      div.edicao *.cabecalho > *, section.edicao *.cabecalho > * {
+        margin: auto 0;
+      }
+
+    div.edicao input[type="checkbox"] + label, section.edicao input[type="checkbox"] + label {
+      background-color: transparent;
+      font-weight: normal;
     }
